# lap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  score_my_api.yml
.github/workflows/: ci.yml  leaderboard.yml
docs/: ARAZZO.md  CACHE-ECONOMICS.md  DISCOVERY.md  FACADE-AB.md  FIELD.md  LANDSCAPE.md  LEADERBOARD.md  LISTINGS.md  MCP-COMPRESSOR.md  MCP-LEADERBOARD.md  MCP-VS-CLI.md  POST.md  REAL-TOOLS.md  SPEC-2808.md  TOKENIZERS.md  UPSTREAM-ISSUES.md  X-LAP.md  index.html  lap-badge.json  leaderboard-data.json  mcp-leaderboard-data.json
docs/leaderboard-history/: 2026-07.json
experiments/: arazzo_score.py  cache_economics.py  discovery_scan.py  facade_ab.py  leaderboard.py  mcp_compressor_real.py  mcp_compressor_rootcause.py  mcp_leaderboard.py  mcp_vs_cli.py  spec_2808.py  tokenizer_matrix.py  upstream_issues.py
experiments/token-bench/: live_runs.py  run_bench.py  validation.md
lap/: README.md  __init__.py  cli.py  estimate.py  grade.py  lint.py  mcp_client.py  menu.py  openapi_ir.py  overlay.py  score.py  stack.py  tokens.py
lap/examples/: bookstore.openapi.json
pet-zoo/: .dockerignore  README.md
pet-zoo/app/: main.py  models.py  storage.py
pet-zoo/app/routers/: animals.py  species.py
profile/: llm-api-profile.md
tests/: test_lap.py  test_properties.py
