[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lap-score"
version = "0.5.0"
description = "lap - measure & improve the token-efficiency of agent-facing APIs (OpenAPI & MCP): scorer, linter, the LAP profile, and a token benchmark"
readme = "lap/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agents", "openapi", "mcp", "tokens", "api", "token-efficiency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx", "tiktoken", "pyyaml"]

[project.optional-dependencies]
mcp = ["fastmcp"]          # real-MCP baseline row (lap score)
faithful = ["anthropic"]   # faithful Anthropic count_tokens
all = ["fastmcp", "anthropic"]
dev = ["pytest"]           # test suite

[project.scripts]
lap = "lap.cli:main"

[project.urls]
Homepage = "https://github.com/lCrazyblindl/lap"
Roadmap = "https://github.com/lCrazyblindl/lap/blob/main/ROADMAP.md"
Changelog = "https://github.com/lCrazyblindl/lap/blob/main/CHANGELOG.md"
Leaderboard = "https://github.com/lCrazyblindl/lap/blob/main/docs/LEADERBOARD.md"

[tool.setuptools]
packages = ["lap"]

[tool.setuptools.package-data]
lap = ["examples/*.json"]
