[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lap-score"
version = "0.5.1"
description = "lap - measure & improve the token-efficiency of agent-facing APIs (OpenAPI & MCP): scorer, linter, the LAP profile, and a token benchmark"
readme = "lap/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "agents", "openapi", "mcp", "model-context-protocol", "tokens", "api",
            "token-efficiency", "context-window", "token-cost", "lint", "benchmark",
            "tool-definitions", "leaderboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx", "tiktoken", "pyyaml"]

[project.optional-dependencies]
mcp = ["fastmcp"]          # real-MCP baseline row (lap score)
faithful = ["anthropic"]   # faithful Anthropic count_tokens
all = ["fastmcp", "anthropic"]
dev = ["pytest", "hypothesis"]  # test suite (incl. property-based tests)

[project.scripts]
lap = "lap.cli:main"

[project.urls]
Homepage = "https://github.com/lCrazyblindl/lap"
Roadmap = "https://github.com/lCrazyblindl/lap/blob/main/ROADMAP.md"
Changelog = "https://github.com/lCrazyblindl/lap/blob/main/CHANGELOG.md"
Leaderboard = "https://github.com/lCrazyblindl/lap/blob/main/docs/LEADERBOARD.md"

[tool.setuptools]
packages = ["lap"]

[tool.setuptools.package-data]
lap = ["examples/*.json"]
